데이터베이스(2) 정리

--- a/이것이 취업을 위한 컴퓨터 과학이다/6. Database/mj/CH06_데이터베이스.md
+++ b/이것이 취업을 위한 컴퓨터 과학이다/6. Database/mj/CH06_데이터베이스.md
@@ -430,3 +430,378 @@ UPDATE accounts SET balance = balance + 100 WHERE account_id = 2;
 -- COMMIT;  -- 모든 작업을 확정
 -- ROLLBACK; -- 변경 사항 취소 가능
 ```
+
+# 4. 효율적 쿼리
+
+## 서브 쿼리와 조인
+
+### 서브 쿼리(Subquery)
+
+**정의**
+
+- 다른 SQL문 안에 포함된 SELECT문을 의미.
+- 소괄호 `()`로 감싸 외부 쿼리와 구분.
+- SELECT, INSERT, UPDATE, DELETE 등 다양한 쿼리 안에 포함 가능.
+
+**특징**
+
+- 외부 쿼리와 독립적으로 동작.
+- 복잡한 조건이나 집계가 필요한 경우 유용.
+
+**예시 1: SELECT 안의 서브 쿼리**
+
+```sql
+SELECT users.username,
+       (SELECT COUNT(*)
+        FROM posts
+        WHERE posts.user_id = users.user_id) AS post_count
+FROM users;
+```
+
+- 사용자의 글 개수를 조회할 때 사용.
+- 외부 쿼리: `users` 테이블에서 username 조회
+- 서브 쿼리: `posts` 테이블에서 해당 사용자의 글 수 조회
+
+**예시 2: DELETE 안의 서브 쿼리**
+
+```sql
+DELETE FROM posts
+WHERE user_id = (
+    SELECT user_id
+    FROM users
+    WHERE email = 'kim@example.com'
+);
+```
+
+- 특정 사용자의 글을 삭제할 때 사용.
+
+---
+
+### 조인(Join)
+
+**정의**:
+
+- 두 개 이상의 테이블을 하나로 합치는 SQL 연산.
+- 서브 쿼리보다 가독성이 좋고 성능이 유리할 때 많음.
+
+**종류**:
+
+| 종류 | 설명 |
+| --- | --- |
+| **INNER JOIN** | 두 테이블에서 조인 조건을 만족하는 데이터만 결합 (교집합) |
+| **LEFT OUTER JOIN** | 왼쪽 테이블의 모든 레코드 포함, 매칭 없는 오른쪽 테이블은 NULL |
+| **RIGHT OUTER JOIN** | 오른쪽 테이블의 모든 레코드 포함, 매칭 없는 왼쪽 테이블은 NULL |
+| **FULL OUTER JOIN** | 두 테이블의 모든 레코드 포함, 매칭 없는 부분은 NULL (MySQL은 UNION으로 구현) |
+
+**1) INNER JOIN**
+
+```sql
+SELECT customers.name, orders.id, orders.product_id, orders.amount
+FROM customers
+INNER JOIN orders ON customers.id = orders.customer_id;
+```
+
+- `customers`와 `orders`에서 매칭되는 데이터만 조회.
+
+**2) LEFT OUTER JOIN**
+
+```sql
+SELECT customers.name, orders.id AS order_id
+FROM customers
+LEFT OUTER JOIN orders ON customers.id = orders.customer_id;
+```
+
+- 모든 고객 포함, 주문 없는 고객은 `NULL`.
+
+**3) FULL OUTER JOIN (MySQL에서 구현)**
+
+```sql
+SELECT customers.name, orders.id AS order_id
+FROM customers
+LEFT JOIN orders ON customers.id = orders.customer_id
+UNION
+SELECT customers.name, orders.id AS order_id
+FROM customers
+RIGHT JOIN orders ON customers.id = orders.customer_id;
+```
+
+- 두 테이블의 모든 데이터를 포함, 매칭 없는 값은 NULL.
+
+**4) UNION (합집합)**
+
+- FULL OUTER 조인 문법을 지원하지 않을 때, LEFT RIGHT OUTER JOIN의 결과를 하나로 합칠 때도 사용 가능
+
+---
+
+**서브 쿼리 vs. 조인**
+
+1. **서브 쿼리**: 특정 조건이나 집계값을 조회할 때 유용, 외부 쿼리 안에서 독립적으로 실행.
+2. **조인**: 여러 테이블 데이터를 하나로 결합, INNER/LEFT/RIGHT/FULL OUTER JOIN으로 나뉨.
+3. **서브 쿼리 ↔ 조인**: 일부 서브 쿼리 연산은 조인으로 대체 가능하며, 조인이 성능 면에서 더 효율적일 수 있음.
+
+## 뷰
+
+> SELECT문의 결과를 가상의 테이블로 간주하고 다양한 SQL문 사용 → 서브쿼리
+SELECT문의 결과를 토대로 SQL문을 자 주 실행해야 할 경우, 매번 서브 쿼리를 작성하기에는 중복되는 쿼리가 많아 번거롭다 → 뷰
+> 
+
+정의
+
+- **뷰(View)** = `SELECT문 결과`로 만들어진 **가상의 테이블**
+- 실제 데이터를 저장하지 않고, **쿼리 결과를 재사용**하는 개념
+
+특징
+
+- 복잡한 SQL문을 단순화하고 재사용 가능
+- 마치 테이블처럼 조회 가능 (`SELECT`, `FROM`에서 사용)
+- 실제 테이블의 데이터를 참조 → 뷰 삭제해도 원본 데이터에는 영향 없음
+
+```sql
+-- 뷰 생성
+CREATE VIEW myview AS
+SELECT users.username, users.email, posts.title
+FROM users
+JOIN posts ON users.user_id = posts.user_id;
+
+-- 뷰 삭제
+DROP VIEW myview;
+```
+
+왜 쓸까?
+
+- **쿼리 단순화** → 복잡한 조인/조건식을 매번 쓰지 않아도 됨
+- **재사용성** → 자주 쓰는 SQL 결과를 하나의 뷰로 정의
+- **보안** → 특정 사용자에게 필요한 컬럼만 노출 가능
+
+주의 사항!
+
+- 조회(SELECT)는 자유롭게 가능
+- 삽입(INSERT), 수정(UPDATE), 삭제(DELETE)는 제한될 수 있음
+    - 특히 여러 테이블을 조인한 뷰는 제약 조건을 어기기 쉬우니 조심!
+
+## 인덱스
+
+- **검색 속도 향상**을 목적으로 특정 필드에 만든 **자료구조**
+- 책의 찾아보기(index)와 유사한 개념
+
+---
+
+어떻게 동작할까?
+
+- 인덱스를 만든 컬럼 기준으로 **정렬된 자료구조** 생성
+- 내부적으로 주로 **B트리 / B+트리** 사용
+- 인덱스를 통해 데이터 위치(포인터)로 빠르게 접근
+
+---
+
+- 종류
+    1. **클러스터형 인덱스 (Clustered Index)**
+        - 테이블당 1개
+        - 기본 키(PRIMARY KEY)가 자동으로 클러스터형 인덱스가 됨
+    2. **세컨더리 인덱스 (Secondary Index / Non-clustered Index)**
+        - 여러 개 생성 가능
+        - 조회 속도 향상은 되지만 클러스터형보다 성능은 떨어
+
+```sql
+-- 인덱스 생성
+CREATE INDEX idx_user ON users(nickname);
+
+-- 인덱스 조회
+SHOW INDEX FROM users;
+
+-- 인덱스 삭제
+DROP INDEX idx_user ON users;
+```
+
+---
+
+- 장점
+    - 조회(SELECT) 성능 향상 → 대량 데이터에서 효과적
+    - 특히 **WHERE, JOIN, ORDER BY**에서 자주 쓰이는 컬럼에 적합
+    
+    ---
+    
+- 단점
+    - **INSERT, UPDATE, DELETE 성능 저하** → 인덱스도 갱신해야 하기 때문
+    - **추가 저장 공간** 필요
+    - **너무 많은 인덱스**는 성능을 오히려 악화시킴 (권장: 테이블당 3개 이하)
+    - **중복 데이터가 많은 컬럼**은 인덱스 효율이 낮음
+
+# 5. 데이터베이스 설계
+
+## ER 다이어그램 (ERD, Entity Relationship Diagram)
+
+- **개념**: 데이터베이스에 저장되는 엔티티(객체)와 그 관계를 시각적으로 표현한 다이어그램.
+- **목적**: 데이터베이스 구조를 초기 단계에서 설계하여 유지보수와 개발자 간 소통을 원활히 함.
+- **표기법**
+    1. **피터 첸 표기법 (Peter Chen diagram)**
+        - 엔티티 = 사각형, 관계 = 마름모, 속성 = 타원
+        - 개념적 모델링에 적합, 복잡해지면 가독성이 떨어짐.
+    2. **IE 표기법 (Crow’s Foot, 까마귀 발 표기법)**
+        - 직관적으로 테이블 형태로 표현
+        - 관계는 새 발 모양(1:1, 1:N, M:N)으로 표시
+- **관계 구분**
+    - **식별 관계 (Identifying)**: 참조하는 엔티티가 참조되는 엔티티 없이는 존재 불가 (실선).
+    - **비식별 관계 (Non-identifying)**: 독립적으로 존재 가능 (점선).
+
+---
+
+## 정규화 (Normalization)
+
+> 데이터 중복과 불일치를 줄이고, 
+이상 현상(Anomaly)을 방지하기 위해 테이블을 구조화하는 과정.
+> 
+> 
+> 잘못된 설계 → 성능 저하, 데이터 불일치 발생 방지.
+> 
+- **종류**
+    1. **제1 정규형 (1NF)**
+        - 모든 속성이 **원자값(Atomic Value)**을 가져야 함.
+        - 하나의 칸에 여러 값 X.
+        
+        ![image.png](attachment:5396a2c3-606e-48d8-aeb1-d7e2faddee54:image.png)
+        
+        ---
+        
+        - 예시
+            - 하나의 테이블로 설계
+            - 테이블을 2개로 쪼개기
+        
+        ![image.png](attachment:3280733b-8f17-4a20-9aa8-9fea009474db:image.png)
+        
+        ![image.png](attachment:0afe6902-d971-4d29-8223-2ef2591bddc4:image.png)
+        
+    
+    1. **제2 정규형 (2NF)**
+        - 1NF 만족 + 기본 키의 **일부**에만 종속된 속성 제거.
+        - 즉, **부분 함수 종속성 제거**.
+            - 부분함수 종속성: 기본 키가 아닌 필드가 기본 키의 일부에 종속되어 있는 경우
+            - 완전 함수 종속성: 기본 키 전체에 완전하게 종속되어 있는 경우
+        - 예시
+            
+            ![image.png](attachment:00d3ba5e-69c9-4b06-8e49-c204e4fdaf72:image.png)
+            
+            ![image.png](attachment:ca4faac7-41ca-4803-a7dd-9aa8d33ca107:image.png)
+            
+    2. **제3 정규형 (3NF)
+    기본키가 아닌 모든 필드는 기본 키에 대해…**
+        - 2NF 만족 + **이행적 종속성 제거**.
+            - 이행적 함수 종속성: 만일 어떤 테이블에 A, B, C라는 필드가 있을 때 A가 B를 결정하고(A → B) B가 C를 결정한다면 (B → C) A도 C를 결정하게 되어(A → C) 종속 관계를 형성합니다. 이때 필드 A와 C 사이에는 이 행적 종속 관계 transitive dependency, 이행 함수 종속성이 있다고 표현
+        - 기본 키 아닌 속성이 다른 속성에 종속되면 안 됨.
+        - 예시
+            - 한 학생당 하나의 학과에 속해 있고 학과당 학과 사무실 위치가 하나뿐이라면 ‘학번’이 ‘학과’를 결정하고(학번 → 학과), ‘학과’가 ‘학과 사무실 위치’를 결정 하므로(학과 → 학과 사무실 위치), ‘학번’이 곧 ‘학과 사무실 위치’를 결정하게 됩니다(학번 → 학과사무실 위치)
+            
+            ![image.png](attachment:c94748ec-7af9-457d-8972-b300a21e7d39:image.png)
+            
+            ![image.png](attachment:317d933a-1ebf-4a9e-993c-cd8db5120cac:image.png)
+            
+    3. **보이스/코드 정규형 (BCNF)**
+        - 3NF 만족 + 모든 **결정자가 후보 키**여야 함.
+            - 결정자: 특정 필드를 식별할 수 있는 필드를 의미
+        - 더 엄격한 형태.
+
+---
+
+## 역정규화 (Denormalization)
+
+- 정규화를 과도하게 하면 테이블이 너무 많이 나뉘어 **JOIN이 잦아지고 성능 저하** 발생.
+- 따라서 일부러 **중복 허용**하여 성능을 높이는 경우가 있음.
+- NoSQL은 기본적으로 역정규화 구조를 채택.
+
+# 6. NoSQL
+
+## RDBMS vs NoSQL 정리
+
+### RDBMS
+
+- 데이터를 **테이블(행·열)** 형태로 저장
+- **SQL** 언어 사용
+- **ACID**(원자성, 일관성, 고립성, 지속성) 보장
+- 스키마 고정 → 정형 데이터에 적합
+- **정규화·조인** 적극 활용
+
+---
+
+### NoSQL
+
+- **Not Only SQL** (비관계형 데이터베이스)
+- 다양한 데이터 구조 지원 (테이블 이외)
+- **스키마 자유로움** (정형/반정형/비정형 데이터 저장 가능)
+- **수평적 확장(스케일 아웃)** 용이
+- **높은 성능, 가용성, 확장성, 유연성**
+- ACID 엄격히 보장 X → 대신 성능 중시 (무결성·일관성 일부 희생)
+- 대규모 분산 환경, 비정형 데이터 처리에 적합
+- RDBMS 완전 대체 X→ 상황에 따라 선택
+
+---
+
+### NoSQL 주요 유형
+
+1. **키-값 데이터베이스**
+    - 구조: `Key : Value`
+    - 대표: **Redis, Memcached**
+    - 특징: 단순 구조, 빠른 속도 (메모리 기반 → 인메모리 DB)
+    - 활용: 캐시, 세션 관리
+2. **도큐먼트 데이터베이스**
+    - 구조: JSON, BSON, XML 형태의 **도큐먼트 단위**
+    - 대표: **MongoDB**
+    - 특징: 스키마 자유로움, 컬렉션 단위로 관리
+    - 활용: 유연한 데이터 모델 필요할 때
+3. **그래프 데이터베이스**
+    - 구조: **노드-엣지(관계)**
+    - 대표: **Neo4j**
+    - 특징: 데이터 간 관계를 효율적으로 표현 (SNS, 교통망 등)
+4. **칼럼 패밀리 데이터베이스**
+    - 구조: 행(Row), 열(Column) + 로우 키(Row Key)
+    - 대표: **Cassandra, HBase**
+    - 특징: 스키마 유연, 정규화·조인 없음
+    - 활용: 대규모 데이터 처리, 분산 환경
+
+---
+
+### MongoDB 기본 명령 예시
+
+- DB/컬렉션 생성:
+    
+    `use mydb`, `db.createCollection("mycollection")`
+    
+- 데이터 삽입:
+    
+    `insertOne()`, `insertMany()`
+    
+- 조회:
+    
+    `find()`, 연산자 (`$eq`, `$gt`, `$and` 등)
+    
+- 갱신:
+    
+    `updateOne()`, `updateMany()` (`$set`, `$unset`)
+    
+- 삭제:
+    
+    `deleteOne()`, `deleteMany()`
+    
+
+---
+
+### Redis 기본 명령 예시
+
+- 문자열:
+    
+    `SET`, `GET`, `SETNX`, `MGET`, `DEL`
+    
+- 리스트:
+    
+    `LPUSH`, `RPUSH`, `LPOP`, `RPOP`, `LRANGE`, `LLEN`
+    
+- 특징: 다양한 자료구조 지원 (문자열, 리스트, 해시, 집합)
+
+---
+
+<aside>
+<img src="/icons/checkmark_blue.svg" alt="/icons/checkmark_blue.svg" width="40px" />
+
+- **RDBMS**: 정형 데이터, ACID 보장, 안정적 → 은행·회계 등
+- **NoSQL**: 비정형/대용량 데이터, 성능·확장성·유연성 중시 → SNS·빅데이터·실시간 처리
+- **둘은 대체 관계가 아님**, 상황에 맞춰 병행/선택적으로 사용
+</aside>
